Base design done

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Folding UI Animation</title>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
 
     <body>
@@ -14,5 +15,6 @@
                 <h1>Details</h1>
             </div>
         </div>
+        <script src="./script.js"></script>
     </body>
 </html>
