--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <div id="app" data-state="details">
+        <div id="app" data-state="overview" data-prev-state="details">
             <div class="view" data-view="overview">
                 <h1>Overview</h1>
             </div>
